manifests/rabbitmq-cluster-operator-3.1.2.tgz-manifest.yaml
---
# Source: rabbitmq-cluster-operator/templates/messaging-topology-operator/webhook-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: rabbitmq-cluster-operator
    helm.sh/chart: rabbitmq-cluster-operator-3.1.2
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: messaging-topology-operator
    app.kubernetes.io/part-of: rabbitmq
  name: my-release-rabbitmq-messaging-topology-operator-webhook
  namespace: "default"
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - name: http
      port: 443
      targetPort: http-webhook
      protocol: TCP
      nodePort: null
  selector:
    app.kubernetes.io/name: rabbitmq-cluster-operator
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/component: messaging-topology-operator
---
# Source: rabbitmq-cluster-operator/templates/cluster-operator/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-release-rabbitmq-cluster-operator
  namespace: "default"
  labels:
    app.kubernetes.io/name: rabbitmq-cluster-operator
    helm.sh/chart: rabbitmq-cluster-operator-3.1.2
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: rabbitmq-operator
    app.kubernetes.io/part-of: rabbitmq
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: rabbitmq-cluster-operator
      app.kubernetes.io/instance: my-release
      app.kubernetes.io/component: rabbitmq-operator
  template:
    metadata:
      labels:
        app.kubernetes.io/name: rabbitmq-cluster-operator
        helm.sh/chart: rabbitmq-cluster-operator-3.1.2
        app.kubernetes.io/instance: my-release
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/component: rabbitmq-operator
        app.kubernetes.io/part-of: rabbitmq
    spec:
      serviceAccountName: my-release-rabbitmq-cluster-operator
      
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/name: rabbitmq-cluster-operator
                    app.kubernetes.io/instance: my-release
                    app.kubernetes.io/component: rabbitmq-operator
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          
      securityContext:
        fsGroup: 1001
      containers:
        - name: rabbitmq-cluster-operator
          image: marketplace.azurecr.io/bitnami/rabbitmq-cluster-operator:2.0.0-scratch-r4
          imagePullPolicy: IfNotPresent
          securityContext:
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1001
          command:
            - /manager
          args:
            - --metrics-bind-address=:9782
          resources:
            limits: {}
            requests: {}
          livenessProbe:
            failureThreshold: 5
            initialDelaySeconds: 5
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 5
            httpGet:
              path: /metrics
              port: http
          readinessProbe:
            failureThreshold: 5
            initialDelaySeconds: 5
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 5
            httpGet:
              path: /metrics
              port: http
          ports:
            - name: http
              containerPort: 9782
              protocol: TCP
---
# Source: rabbitmq-cluster-operator/templates/messaging-topology-operator/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-release-rabbitmq-messaging-topology-operator
  namespace: "default"
  labels:
    app.kubernetes.io/name: rabbitmq-cluster-operator
    helm.sh/chart: rabbitmq-cluster-operator-3.1.2
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: messaging-topology-operator
    app.kubernetes.io/part-of: rabbitmq
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: rabbitmq-cluster-operator
      app.kubernetes.io/instance: my-release
      app.kubernetes.io/component: messaging-topology-operator
  template:
    metadata:
      labels:
        app.kubernetes.io/name: rabbitmq-cluster-operator
        helm.sh/chart: rabbitmq-cluster-operator-3.1.2
        app.kubernetes.io/instance: my-release
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/component: messaging-topology-operator
        app.kubernetes.io/part-of: rabbitmq
    spec:
      serviceAccountName: my-release-rabbitmq-messaging-topology-operator
      
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/name: rabbitmq-cluster-operator
                    app.kubernetes.io/instance: my-release
                    app.kubernetes.io/component: messaging-topology-operator
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          
      securityContext:
        fsGroup: 1001
      containers:
        - name: rabbitmq-cluster-operator
          image: marketplace.azurecr.io/bitnami/rmq-messaging-topology-operator:1.8.0-scratch-r3
          imagePullPolicy: IfNotPresent
          securityContext:
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1001
          command:
            - /manager
          args:
            - --metrics-bind-address=:8080
          resources:
            limits: {}
            requests: {}
          ports:
            - name: http-webhook
              containerPort: 9443
              protocol: TCP
            - name: http-metrics
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            failureThreshold: 5
            initialDelaySeconds: 5
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 5
            httpGet:
              path: /metrics
              port: http-metrics
          readinessProbe:
            failureThreshold: 5
            initialDelaySeconds: 5
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 5
            httpGet:
              path: /metrics
              port: http-metrics
          volumeMounts:
            - mountPath: /tmp/k8s-webhook-server/serving-certs
              name: cert
              readOnly: true
      volumes:
        - name: cert
          secret:
            defaultMode: 420
            secretName: my-release-rabbitmq-messaging-topology-operator-webhook
---
# Source: rabbitmq-cluster-operator/templates/messaging-topology-operator/validating-webhook-configuration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  labels:
    app.kubernetes.io/name: rabbitmq-cluster-operator
    helm.sh/chart: rabbitmq-cluster-operator-3.1.2
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: messaging-topology-operator
    app.kubernetes.io/part-of: rabbitmq
  annotations:
  name: my-release-rabbitmq-messaging-topology-operator-webhook-default
webhooks:
  - admissionReviewVersions:
      - v1
    clientConfig:
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURKekNDQWcrZ0F3SUJBZ0lRS0Q5S0YyMkN1ckp4OEplSHZNN3BzVEFOQmdrcWhraUc5dzBCQVFzRkFEQWUKTVJ3d0dnWURWUVFERXhOeWJYRXRiWE5uTFhSdmNHOXNiMmQ1TFdOaE1CNFhEVEkwTURZeE5USXpOVFF5TjFvWApEVEkxTURZeE5USXpOVFF5TjFvd0hqRWNNQm9HQTFVRUF4TVRjbTF4TFcxelp5MTBiM0J2Ykc5bmVTMWpZVENDCkFTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBS3grSS9sQWlRazMxVlYvaEx3bUY1SEcKRnlHTG5zSW1QbEFIUmlPVWxXZU5KWU5BWG84cnlkdDhGNjlaQmtXRCt4SGhTSFRKRkNTVjB2Tk1iWEMwcFhUUAp5Um45UTRBN00 [...]
      service:
        name: my-release-rabbitmq-messaging-topology-operator-webhook
        namespace: "default"
        path: /validate-rabbitmq-com-v1beta1-binding
        port: 443
    failurePolicy: Fail
    name: vbinding.kb.io
    rules:
      - apiGroups:
          - rabbitmq.com
        apiVersions:
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - bindings
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURKekNDQWcrZ0F3SUJBZ0lRS0Q5S0YyMkN1ckp4OEplSHZNN3BzVEFOQmdrcWhraUc5dzBCQVFzRkFEQWUKTVJ3d0dnWURWUVFERXhOeWJYRXRiWE5uTFhSdmNHOXNiMmQ1TFdOaE1CNFhEVEkwTURZeE5USXpOVFF5TjFvWApEVEkxTURZeE5USXpOVFF5TjFvd0hqRWNNQm9HQTFVRUF4TVRjbTF4TFcxelp5MTBiM0J2Ykc5bmVTMWpZVENDCkFTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBS3grSS9sQWlRazMxVlYvaEx3bUY1SEcKRnlHTG5zSW1QbEFIUmlPVWxXZU5KWU5BWG84cnlkdDhGNjlaQmtXRCt4SGhTSFRKRkNTVjB2Tk1iWEMwcFhUUAp5Um45UTRBN00 [...]
      service:
        name: my-release-rabbitmq-messaging-topology-operator-webhook
        namespace: "default"
        path: /validate-rabbitmq-com-v1beta1-exchange
        port: 443
    failurePolicy: Fail
    name: vexchange.kb.io
    rules:
      - apiGroups:
          - rabbitmq.com
        apiVersions:
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - exchanges
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURKekNDQWcrZ0F3SUJBZ0lRS0Q5S0YyMkN1ckp4OEplSHZNN3BzVEFOQmdrcWhraUc5dzBCQVFzRkFEQWUKTVJ3d0dnWURWUVFERXhOeWJYRXRiWE5uTFhSdmNHOXNiMmQ1TFdOaE1CNFhEVEkwTURZeE5USXpOVFF5TjFvWApEVEkxTURZeE5USXpOVFF5TjFvd0hqRWNNQm9HQTFVRUF4TVRjbTF4TFcxelp5MTBiM0J2Ykc5bmVTMWpZVENDCkFTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBS3grSS9sQWlRazMxVlYvaEx3bUY1SEcKRnlHTG5zSW1QbEFIUmlPVWxXZU5KWU5BWG84cnlkdDhGNjlaQmtXRCt4SGhTSFRKRkNTVjB2Tk1iWEMwcFhUUAp5Um45UTRBN00 [...]
      service:
        name: my-release-rabbitmq-messaging-topology-operator-webhook
        namespace: "default"
        path: /validate-rabbitmq-com-v1beta1-federation
        port: 443
    failurePolicy: Fail
    name: vfederation.kb.io
    rules:
      - apiGroups:
          - rabbitmq.com
        apiVersions:
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - federations
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURKekNDQWcrZ0F3SUJBZ0lRS0Q5S0YyMkN1ckp4OEplSHZNN3BzVEFOQmdrcWhraUc5dzBCQVFzRkFEQWUKTVJ3d0dnWURWUVFERXhOeWJYRXRiWE5uTFhSdmNHOXNiMmQ1TFdOaE1CNFhEVEkwTURZeE5USXpOVFF5TjFvWApEVEkxTURZeE5USXpOVFF5TjFvd0hqRWNNQm9HQTFVRUF4TVRjbTF4TFcxelp5MTBiM0J2Ykc5bmVTMWpZVENDCkFTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBS3grSS9sQWlRazMxVlYvaEx3bUY1SEcKRnlHTG5zSW1QbEFIUmlPVWxXZU5KWU5BWG84cnlkdDhGNjlaQmtXRCt4SGhTSFRKRkNTVjB2Tk1iWEMwcFhUUAp5Um45UTRBN00 [...]
      service:
        name: my-release-rabbitmq-messaging-topology-operator-webhook
        namespace: "default"
        path: /validate-rabbitmq-com-v1alpha1-superstream
        port: 443
    failurePolicy: Fail
    name: vsuperstream.kb.io
    rules:
      - apiGroups:
          - rabbitmq.com
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - superstreams
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURKekNDQWcrZ0F3SUJBZ0lRS0Q5S0YyMkN1ckp4OEplSHZNN3BzVEFOQmdrcWhraUc5dzBCQVFzRkFEQWUKTVJ3d0dnWURWUVFERXhOeWJYRXRiWE5uTFhSdmNHOXNiMmQ1TFdOaE1CNFhEVEkwTURZeE5USXpOVFF5TjFvWApEVEkxTURZeE5USXpOVFF5TjFvd0hqRWNNQm9HQTFVRUF4TVRjbTF4TFcxelp5MTBiM0J2Ykc5bmVTMWpZVENDCkFTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBS3grSS9sQWlRazMxVlYvaEx3bUY1SEcKRnlHTG5zSW1QbEFIUmlPVWxXZU5KWU5BWG84cnlkdDhGNjlaQmtXRCt4SGhTSFRKRkNTVjB2Tk1iWEMwcFhUUAp5Um45UTRBN00 [...]
      service:
        name: my-release-rabbitmq-messaging-topology-operator-webhook
        namespace: "default"
        path: /validate-rabbitmq-com-v1beta1-permission
        port: 443
    failurePolicy: Fail
    name: vpermission.kb.io
    rules:
      - apiGroups:
          - rabbitmq.com
        apiVersions:
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - permissions
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURKekNDQWcrZ0F3SUJBZ0lRS0Q5S0YyMkN1ckp4OEplSHZNN3BzVEFOQmdrcWhraUc5dzBCQVFzRkFEQWUKTVJ3d0dnWURWUVFERXhOeWJYRXRiWE5uTFhSdmNHOXNiMmQ1TFdOaE1CNFhEVEkwTURZeE5USXpOVFF5TjFvWApEVEkxTURZeE5USXpOVFF5TjFvd0hqRWNNQm9HQTFVRUF4TVRjbTF4TFcxelp5MTBiM0J2Ykc5bmVTMWpZVENDCkFTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBS3grSS9sQWlRazMxVlYvaEx3bUY1SEcKRnlHTG5zSW1QbEFIUmlPVWxXZU5KWU5BWG84cnlkdDhGNjlaQmtXRCt4SGhTSFRKRkNTVjB2Tk1iWEMwcFhUUAp5Um45UTRBN00 [...]
      service:
        name: my-release-rabbitmq-messaging-topology-operator-webhook
        namespace: "default"
        path: /validate-rabbitmq-com-v1beta1-policy
        port: 443
    failurePolicy: Fail
    name: vpolicy.kb.io
    rules:
      - apiGroups:
          - rabbitmq.com
        apiVersions:
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - policies
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURKekNDQWcrZ0F3SUJBZ0lRS0Q5S0YyMkN1ckp4OEplSHZNN3BzVEFOQmdrcWhraUc5dzBCQVFzRkFEQWUKTVJ3d0dnWURWUVFERXhOeWJYRXRiWE5uTFhSdmNHOXNiMmQ1TFdOaE1CNFhEVEkwTURZeE5USXpOVFF5TjFvWApEVEkxTURZeE5USXpOVFF5TjFvd0hqRWNNQm9HQTFVRUF4TVRjbTF4TFcxelp5MTBiM0J2Ykc5bmVTMWpZVENDCkFTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBS3grSS9sQWlRazMxVlYvaEx3bUY1SEcKRnlHTG5zSW1QbEFIUmlPVWxXZU5KWU5BWG84cnlkdDhGNjlaQmtXRCt4SGhTSFRKRkNTVjB2Tk1iWEMwcFhUUAp5Um45UTRBN00 [...]
      service:
        name: my-release-rabbitmq-messaging-topology-operator-webhook
        namespace: "default"
        path: /validate-rabbitmq-com-v1beta1-queue
        port: 443
    failurePolicy: Fail
    name: vqueue.kb.io
    rules:
      - apiGroups:
          - rabbitmq.com
        apiVersions:
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - queues
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURKekNDQWcrZ0F3SUJBZ0lRS0Q5S0YyMkN1ckp4OEplSHZNN3BzVEFOQmdrcWhraUc5dzBCQVFzRkFEQWUKTVJ3d0dnWURWUVFERXhOeWJYRXRiWE5uTFhSdmNHOXNiMmQ1TFdOaE1CNFhEVEkwTURZeE5USXpOVFF5TjFvWApEVEkxTURZeE5USXpOVFF5TjFvd0hqRWNNQm9HQTFVRUF4TVRjbTF4TFcxelp5MTBiM0J2Ykc5bmVTMWpZVENDCkFTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBS3grSS9sQWlRazMxVlYvaEx3bUY1SEcKRnlHTG5zSW1QbEFIUmlPVWxXZU5KWU5BWG84cnlkdDhGNjlaQmtXRCt4SGhTSFRKRkNTVjB2Tk1iWEMwcFhUUAp5Um45UTRBN00 [...]
      service:
        name: my-release-rabbitmq-messaging-topology-operator-webhook
        namespace: "default"
        path: /validate-rabbitmq-com-v1beta1-schemareplication
        port: 443
    failurePolicy: Fail
    name: vschemareplication.kb.io
    rules:
      - apiGroups:
          - rabbitmq.com
        apiVersions:
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - schemareplications
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURKekNDQWcrZ0F3SUJBZ0lRS0Q5S0YyMkN1ckp4OEplSHZNN3BzVEFOQmdrcWhraUc5dzBCQVFzRkFEQWUKTVJ3d0dnWURWUVFERXhOeWJYRXRiWE5uTFhSdmNHOXNiMmQ1TFdOaE1CNFhEVEkwTURZeE5USXpOVFF5TjFvWApEVEkxTURZeE5USXpOVFF5TjFvd0hqRWNNQm9HQTFVRUF4TVRjbTF4TFcxelp5MTBiM0J2Ykc5bmVTMWpZVENDCkFTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBS3grSS9sQWlRazMxVlYvaEx3bUY1SEcKRnlHTG5zSW1QbEFIUmlPVWxXZU5KWU5BWG84cnlkdDhGNjlaQmtXRCt4SGhTSFRKRkNTVjB2Tk1iWEMwcFhUUAp5Um45UTRBN00 [...]
      service:
        name: my-release-rabbitmq-messaging-topology-operator-webhook
        namespace: "default"
        path: /validate-rabbitmq-com-v1beta1-shovel
        port: 443
    failurePolicy: Fail
    name: vshovel.kb.io
    rules:
      - apiGroups:
          - rabbitmq.com
        apiVersions:
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - shovels
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURKekNDQWcrZ0F3SUJBZ0lRS0Q5S0YyMkN1ckp4OEplSHZNN3BzVEFOQmdrcWhraUc5dzBCQVFzRkFEQWUKTVJ3d0dnWURWUVFERXhOeWJYRXRiWE5uTFhSdmNHOXNiMmQ1TFdOaE1CNFhEVEkwTURZeE5USXpOVFF5TjFvWApEVEkxTURZeE5USXpOVFF5TjFvd0hqRWNNQm9HQTFVRUF4TVRjbTF4TFcxelp5MTBiM0J2Ykc5bmVTMWpZVENDCkFTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBS3grSS9sQWlRazMxVlYvaEx3bUY1SEcKRnlHTG5zSW1QbEFIUmlPVWxXZU5KWU5BWG84cnlkdDhGNjlaQmtXRCt4SGhTSFRKRkNTVjB2Tk1iWEMwcFhUUAp5Um45UTRBN00 [...]
      service:
        name: my-release-rabbitmq-messaging-topology-operator-webhook
        namespace: "default"
        path: /validate-rabbitmq-com-v1beta1-user
        port: 443
    failurePolicy: Fail
    name: vuser.kb.io
    rules:
      - apiGroups:
          - rabbitmq.com
        apiVersions:
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - users
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURKekNDQWcrZ0F3SUJBZ0lRS0Q5S0YyMkN1ckp4OEplSHZNN3BzVEFOQmdrcWhraUc5dzBCQVFzRkFEQWUKTVJ3d0dnWURWUVFERXhOeWJYRXRiWE5uTFhSdmNHOXNiMmQ1TFdOaE1CNFhEVEkwTURZeE5USXpOVFF5TjFvWApEVEkxTURZeE5USXpOVFF5TjFvd0hqRWNNQm9HQTFVRUF4TVRjbTF4TFcxelp5MTBiM0J2Ykc5bmVTMWpZVENDCkFTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBS3grSS9sQWlRazMxVlYvaEx3bUY1SEcKRnlHTG5zSW1QbEFIUmlPVWxXZU5KWU5BWG84cnlkdDhGNjlaQmtXRCt4SGhTSFRKRkNTVjB2Tk1iWEMwcFhUUAp5Um45UTRBN00 [...]
      service:
        name: my-release-rabbitmq-messaging-topology-operator-webhook
        namespace: "default"
        path: /validate-rabbitmq-com-v1beta1-vhost
        port: 443
    failurePolicy: Fail
    name: vvhost.kb.io
    rules:
      - apiGroups:
          - rabbitmq.com
        apiVersions:
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - vhosts
    sideEffects: None
